PluggableAuthService changelog
==============================

PluggableAuthService 1.5.5 (unreleased)
---------------------------------------

- Fixed broken markup.

- Don't fail on users defined in multiple user sources on the ZODBGroupManager
  listing page.

PluggableAuthService 1.5.4 (2008-11-20)
---------------------------------------

- Launchpad #273680:  Avoid expensive / incorrect dive into 'enumerateUsers'
  when trying to validate w/o either a real ID or login.

- Launchpad #300321:  ZODBGroupManager.enumerateGroups failed to find
  groups with unicode IDs.

- Ensure the _findUser cache is invalidated if the roles or groups for
  a principal change.

- Launchpad #15569586:  docstring fix.

- Ensure ZODBRoleManagerExportImport doesn't fail if it tries to add a
  role that already exists (idempotence is desirable in GS importers)


PluggableAuthService 1.5.3 (2008-02-06)
---------------------------------------

- ZODBUserManager plugin:  allow unicode arguments to 'enumerateUsers'.
  (https://bugs.launchpad.net/zope-pas/+bug/189627)

- plugins/ZODBRoleManager: added logging in case searchPrincipial()
  returning more than one result (which might happen in case of 
  having duplicate id within difference user sources)


PluggableAuthService 1.5.2.1 (2007-12-07)
-----------------------------------------

- Packaging error:  the 1.5.2 distribution was made from an
  'svn export', and thus was missing package data files.


PluggableAuthService 1.5.2 (2007-11-28)
---------------------------------------

- DomainAuthHelper plugin:  fix glitch for plugins which have never
  configured any "default" policy:  'authenticateCredentials' and
  'getRolesForPrincipal' would raise ValueError.
  (http://www.zope.org/Collectors/PAS/59)


PluggableAuthService 1.5.1 (2007-09-11)
---------------------------------------

- PluggableAuthService._verifyUser: changed to use exact_match to the 
  enumerator, otherwise a user with login 'foobar' might get returned 